# sts2-cli

./: .pre-commit-config.yaml  CLAUDE.md  PROTOCOL.md  README.md  launch.py  pyproject.toml  ruff.toml
.github/workflows/: tests.yml
agent/: auto_play.py  combat_helper.py  sts2_bridge.py  validate_learning.py
localization_eng/: _done.txt  cards.json  events.json  monsters.json  settings_ui.json
python/: game_log.py  play.py  play_full_run.py
src/Sts2Headless/: Program.cs  RunSimulator.cs
src/Sts2Headless/simulation/: HeadlessCardSelector.cs  InlineSynchronizationContext.cs  LocLookup.cs  RunSimulator.Actions.cs  RunSimulator.DecisionDetection.cs  RunSimulator.cs
tests/: conftest.py  test_card_reward.py  test_characters.py  test_combat.py  test_english.py  test_event.py  test_map.py  test_play.py  test_rest_site.py  test_shop.py
